--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock-Paper-Scissors Game</title>
+  <title>Rock-Paper-Scissors!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <script src="script.js"></script>
+  <div id="game-container">
+    <h1>Rock-Paper-Scissors!</h1>
+    <p>Current score:</p>
+    <!--<p>User: 0</p>
+    <p>Computer: 0</p>
+    <p>The user chose rock.</p>
+    <p>The computer chose paper.</p>
+    <p>The computer won!</p>-->
+    <div class="images-container">
+      <div id="rock">
+        <img src="images/rock-hand.png" alt="rock">
+      </div>
+      <div id="paper">
+        <img src="images/paper-hand.png" alt="paper">
+      </div>
+      <div id="scissors">
+        <img src="images/scissors-hand.png" alt="scissors">
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </div>
 </body>
 </html>
