Add computer random choice

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <h1>Rock, Paper, Scissors!</h1>
     <p>Current score:</p>
     <p id="userScore">User: 0</p>
-    <p id="computerScore">Computer: 0</p>
+    <p id="compScore">Computer: 0</p>
     <p id="userChoice" onclick ="functionRock">The user chose</p>
-    <p id="computerChoice">The computer chose</p>
+    <p id="compChoice">The computer chose</p>
     <p id="gameResults">The computer won!</p>
-    <div class="images-container">
-      <div id="rock" value="1">
+    <div id = "rdmChoice" class="images-container">
+      <div id="rock" class="choice" value="1">
         <img class="choice" src="images/rock-hand.png" alt="rock">
       </div>
-      <div id="paper" value="1">
-        <img class="choice" src="images/paper-hand.png" alt="paper">
+      <div id="paper" class="choice" value="1">
+        <img src="images/paper-hand.png" alt="paper">
       </div>
-      <div id="scissors" value="1">
-        <img class="choice" src="images/scissors-hand.png" alt="scissors">
+      <div id="scissors" class="choice" value="1">
+        <img src="images/scissors-hand.png" alt="scissors">
       </div>
     </div>
     <script src="script.js"></script>
