--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           />
         </div>
       </div>
-      <script src="script3.js"></script>
+      <script src="script.js"></script>
     </div>
   </body>
 </html>
