--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
       <p id="userChoice"></p>
       <p id="compChoice"></p>
       <p id="gameResults"></p>
-      <div id="rdmChoice" class="images-container">
-        <!--id="rdmChoice" needs to be fixed-->
+      <div class="images-container">
         <div>
           <img
             id="rock"
             class="choices"
-            value="1"
             src="images/rock-hand.png"
             alt="rock"
           />
@@ -31,7 +29,6 @@
           <img
             id="paper"
             class="choices"
-            value="1"
             src="images/paper-hand.png"
             alt="paper"
           />
@@ -40,7 +37,6 @@
           <img
             id="scissors"
             class="choices"
-            value="1"
             src="images/scissors-hand.png"
             alt="scissors"
           />
@@ -50,54 +46,3 @@
     </div>
   </body>
 </html>
-
-<!--PSEUDOCODE
-User can select a rock, paper or scissors
-
-When a user selects rock, paper or scissors the screen will display:
-  -what the computer player has chosen
-  -whether they have won or lost that game
-
-The user can play as many times as they want
-
-A score of total wins and losses will be displayed on the screen
-
-PSEUDOCODE
-
-DECLARE a variable to hold the user's choice.
-DECLARE a variable to hold the computer's choice.
-DECLARE a variable to hold the user's score.
-DECLARE a variable to hold the computer's score.
-DECLARE a variable to hold who won.
-COMPARE user's choice and computer's choice.
-IF the choice is:
-  User vs Computer
-  rock + scissors = (rock wins) user wins
-  rock + paper = (paper wins) computer wins
-  rock + rock = (it's a tie!) no one wins
-  paper + scissors = (scissors win) computer wins
-  paper + paper = (it's a tie!) no one wins
-  paper + rock = (paper wins) user wins
-  scissors + scissors = (it's a tie!) no one wins
-  scissors + paper = (scissors win) user wins
-  scissors + rock = (rock wins) computer wins
-IF the user won
-  ADD a +1 point to the user's score
-IF the computer won
-  ADD a +1 point to the computer's score
-IF it was a tie
-  DON'T add any points to the players
-
-LOGIC
-
-User score starts in 0
-Computer score starts in 0
-Once the user choses, print ("The user chose <choice>)"
-Then, the computer chose <the computer pick a random choice>
-and print ("The user chose <choice>")
-Compare both choices
-Print the result ("The <player> won!")
-Add user or computer a point.
-If it's a tie computer will print ("It was a tie") and no points will be added to the score
-
--->
